<resources>
    <string name="app_name">VS pascalo chat</string>
    <string name="username">Username</string>
    <string name="join_chat">Join chat</string>
    <string name="settings">Settings</string>
    <string name="address">Address</string>
    <string name="address_message">Please enter the chat server\'s IP address</string>
    <string name="port">Port</string>
    <string name="port_message">Please enter the chat server\'s port</string>
    <string name="default_ip_address">10.0.2.2</string>
    <string name="default_port">4446</string>
    <string name="refresh_button_text">refresh chat log</string>
    <string name="chat_view_text">Refresh to display messages on the server.</string>
</resources>
