<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings"
        android:key="pref_settings">

        <EditTextPreference
            android:key="address"
            android:title="@string/address"
            android:persistent="true"
            android:dialogTitle="@string/address"
            android:dialogMessage="@string/address_message"
            android:hint="@string/default_ip_address"
            android:inputType="phone" />

        <EditTextPreference
            android:key="port"
            android:title="@string/port"
            android:persistent="true"
            android:dialogTitle="@string/port"
            android:dialogMessage="@string/port_message"
            android:hint="@string/default_port"
            android:inputType="number" />

    </PreferenceCategory>

</PreferenceScreen>